--- a/package.json
+++ b/package.json
@@ -41,6 +41,9 @@
     "mini-css-extract-plugin": "^0.8.0",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-router-dom": "^5.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
     "webpack-dev-server": "^3.8.1",
     "webpack-merge": "^4.2.2"
