--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "SET NODE_ENV=development && webpack-dev-server --open --config webpack.dev.js",
+    "start": "node server.js",
+    "heroku-postbuild": "webpack -p --config webpack.prod.js",
+    "start:dev": "SET NODE_ENV=development && webpack-dev-server --open --config webpack.dev.js",
     "test": "jest --config=jest.config.js",
     "coveralls": "jest --config=jest.config.js --coverage -u && cat ./coverage/lcov.info | coveralls"
   },
@@ -45,6 +47,7 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
     "react-router-dom": "^5.1.1",
