--- a/package.json
+++ b/package.json
@@ -47,13 +47,28 @@
     "webpack-cli": "^3.3.9"
   },
   "dependencies": {
+    "@babel/plugin-transform-runtime": "^7.6.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.5",
+    "axios": "^0.19.0",
+    "axios-mock-adapter": "^1.17.0",
+    "classnames": "^2.2.6",
     "express": "^4.17.1",
+    "file-loader": "^4.2.0",
+    "jwt-decode": "^2.2.0",
+    "nock": "^11.3.5",
+    "prop-types": "^15.7.2",
     "react": "^16.10.1",
     "react-dom": "^16.10.1",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.1",
     "redux": "^4.0.4",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0",
+    "sinon": "^7.5.0",
     "uglifyjs-webpack-plugin": "^2.2.0",
+    "url-loader": "^2.1.0",
     "webpack-dev-server": "^3.8.1",
     "webpack-merge": "^4.2.2"
   }
